see that file and the SVN log for more historic information.  The
entire history of the project is available through SVN.

----------------------------------------------------------------------
--- 2007-11-XX  Release 7.11.0                                     ---
----------------------------------------------------------------------

* improved dbconcat object suffix and prefix options - Sean Morrison
* Tcl/Tk updated to 8.5 final from 8.5b1 - Erik Greenwald
* fixed PIX image file creation bug on Windows - Bob Parker
* ported rtwizard to function properly on Windows - Bob Parker
* fixed mged text-editing commands on Windows platform - Bob Parker
* removed duplicate points text-editing ARBs in mged - John Anderson
* improved mged ted line-ending support using wordpad - Bob Parker
* fixed g_diff bug where some differences were missed - John Anderson
* fixed bug evaluating metaball normals - Erik Greenwald, Ed Davisson
* improved metaball primitive rendering - Erik Greenwald
* fixed bug in mged rcc-cap command when using 't' option - Bob Parker
* mged classic mode now works on Windows platform - Bob Parker
* fixed Windows-specific raytrace framebuffer delay - Bob Parker
* new tracker tool for extracting NEWS tracker data - Sean Morrison
* converted source repository from CVS to Subversion - Sean Morrison
* new 'dir2ae' mged command for getting az/el from dir - Sean Morrison
* new 'ae2dir' mged command for getting dir from az/el - Bob Parker
* fixed empty name crash when using mged 'lt' command  - Sean Morrison
* Pro/E plugin allows spaces in part name mapping file - Sean Morrison
* Pro/E plugin creates 'top.#' if 'top' already exists - Sean Morrison
* fixed asc2g bug on Windows that caused a crash on exit - Bob Parker
* fixed bugs in several Utah Raster Toolkit tools - Pedro Giffuni
* fixed mged start-up initialization bug on Windows - Daniel Roßberg
* graceful handling of mesh normal failures - Sean Morrison